fix text center alignment

--- a/css/home.css
+++ b/css/home.css
@@ -13,6 +13,10 @@
   height: 50vh;
 }
 
+.mw-450 {
+  max-width: 450px;
+}
+
 .item-description {
   width: 50%;
   height: 100%;
